--- a/src/view/FormFicha.form
+++ b/src/view/FormFicha.form
@@ -769,7 +769,7 @@
                 <Component class="javax.swing.JLabel" name="labelNome">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Noto Sans" size="14" style="0"/>
+                      <Font name="Nunito SemiBold" size="14" style="0"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="jLabel5"/>
                   </Properties>
