--- a/src/relatorios/FichaDeTreino.jrxml
+++ b/src/relatorios/FichaDeTreino.jrxml
@@ -88,14 +88,20 @@
 					<text><![CDATA[Data Avaliação]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="440" y="70" width="110" height="30" uuid="58fb8b17-c89d-40e9-a701-58430b609f39"/>
+					<reportElement stretchType="RelativeToBandHeight" x="440" y="70" width="110" height="30" uuid="58fb8b17-c89d-40e9-a701-58430b609f39"/>
+					<box>
+						<bottomPen lineWidth="1.0"/>
+					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font size="16" isBold="true"/>
 					</textElement>
 					<text><![CDATA[Direita]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="340" y="70" width="92" height="30" uuid="c554429f-04d9-4380-92c0-35ea33502d13"/>
+					<reportElement stretchType="RelativeToBandHeight" x="340" y="70" width="92" height="30" uuid="c554429f-04d9-4380-92c0-35ea33502d13"/>
+					<box>
+						<bottomPen lineWidth="1.0"/>
+					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font size="16" isBold="true"/>
 					</textElement>
@@ -352,7 +358,10 @@
 	<columnHeader>
 		<band height="202" splitType="Stretch">
 			<textField>
-				<reportElement x="70" y="7" width="474" height="30" uuid="8c5cac21-c645-412b-b032-c08d01f72057"/>
+				<reportElement x="70" y="7" width="485" height="30" uuid="8c5cac21-c645-412b-b032-c08d01f72057"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
@@ -360,41 +369,59 @@
 			</textField>
 			<staticText>
 				<reportElement x="0" y="7" width="70" height="30" uuid="b3484775-358b-44c5-ba1d-f6a942e36824"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nome]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="180" y="40" width="364" height="30" uuid="f0b65e78-ef68-4c61-a038-4a5c2cc82d4b"/>
+				<reportElement x="180" y="40" width="375" height="30" uuid="f0b65e78-ef68-4c61-a038-4a5c2cc82d4b"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{matricula}.getFreqAtFisica()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="80" y="70" width="464" height="30" uuid="9e764fef-857e-4368-b079-e160d20c7b8a"/>
+				<reportElement x="80" y="70" width="474" height="30" uuid="9e764fef-857e-4368-b079-e160d20c7b8a"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{matricula}.getColesterol()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="120" y="100" width="424" height="30" uuid="e16fb968-a386-40d8-be91-0e71ae13cf54"/>
+				<reportElement x="120" y="100" width="434" height="30" uuid="e16fb968-a386-40d8-be91-0e71ae13cf54"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{matricula}.getInfSobrepeso()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="160" y="130" width="384" height="30" uuid="af8d8995-5ff7-4a50-ad85-4704e2ae278a"/>
+				<reportElement x="160" y="130" width="395" height="30" uuid="af8d8995-5ff7-4a50-ad85-4704e2ae278a"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{matricula}.getProbOrtop()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="106" y="160" width="438" height="30" uuid="18aad39b-1bf5-4767-bc59-e1827767546a"/>
+				<reportElement x="106" y="160" width="448" height="30" uuid="18aad39b-1bf5-4767-bc59-e1827767546a"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
@@ -402,6 +429,9 @@
 			</textField>
 			<staticText>
 				<reportElement x="0" y="40" width="180" height="30" uuid="c00dcc1f-84d3-4bd3-bef4-6cc16727cec3"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -409,6 +439,9 @@
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="70" width="80" height="30" uuid="4d9a41db-a27c-4626-bb89-65b92eadb351"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -416,6 +449,9 @@
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="100" width="120" height="30" uuid="14235391-e619-4646-816c-b0f00bbf11cc"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -423,6 +459,9 @@
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="130" width="170" height="30" uuid="a64e0616-a035-4cd4-91b6-be964bb52dec"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -430,6 +469,9 @@
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="160" width="130" height="30" uuid="55459408-076e-40ab-8995-1af27e27d658"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
