--- a/src/view/LoginForm.form
+++ b/src/view/LoginForm.form
@@ -93,6 +93,9 @@
                     <Property name="accent" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="4a" green="94" red="dc" type="rgb"/>
                     </Property>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Nunito SemiBold" size="16" style="0"/>
+                    </Property>
                     <Property name="label" type="java.lang.String" value="Nome de usu&#xe1;rio"/>
                     <Property name="selectionColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="4a" green="94" red="dc" type="rgb"/>
@@ -119,6 +122,9 @@
                     </Property>
                     <Property name="accent" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="4a" green="94" red="dc" type="rgb"/>
+                    </Property>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Tahoma" size="16" style="0"/>
                     </Property>
                     <Property name="label" type="java.lang.String" value="Senha"/>
                     <Property name="selectionColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
